tests/macros/confirm/filter.stderr
error: option `filter` does not exist for kind `confirm`
 --> $DIR/filter.rs:2:47
  |
2 |     let q = inquisition::questions![confirm { filter: todo!() }];
  |                                               ^^^^^^
