tests/macros/confirm/filter.rs
fn main() {
    let q = inquisition::questions![confirm { filter: todo!() }];
}
